Fix Matomo logo so it can't overflow the div in small screens.

--- a/css/product.css
+++ b/css/product.css
@@ -241,6 +241,9 @@ div.john-hancock {
     }
 }
 
+.not-too-big {
+    max-width: 80%;
+}
 
 /*  COLORS OF TEXT*/
 
